# libstrophe

./: .gitmodules  CMakeLists.txt  strophe.h  strophepp.h
debian/: control  rules
examples/: CMakeLists.txt  basic.c  bot.c
rpm/: libstrophe.spec
src/: common.h  ctx.c  event.c  oocontext.cpp
